--- a/docs/style.css
+++ b/docs/style.css
@@ -9,7 +9,7 @@ body {
   min-height: 100vh;
   font-family: 'Roboto', sans-serif;
   background-color: #111;
-  color: #98e7f1;
+  color: #2d5d2f;
 }
 .hero {
   flex: 1;
