--- a/docs/style.css
+++ b/docs/style.css
@@ -155,23 +155,26 @@ carousel-overlay {
 
 .discover-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+  grid-template-columns: repeat(auto-fit, 200px);
   gap: 1rem;
+  justify-content: center;
   padding: 2rem;
 }
 
 #dramaList {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, 200px);
   gap: 1rem;
+  justify-content: center;
   padding: 2rem;
 }
 
-.dramaList img {
+.drama-card img {
   width: 100%;
   height: 300px;
   object-fit: cover;
   display: block;
+  
 }
 
 .drama-card {
